# distillory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: COMPARISON.md
examples/: README.md  crm_recipe.py  mcp_with_claude.md  quickstart.py  synthesis_byo.py
src/distillory/: __init__.py  cli.py  config.py  engine.py  models.py
src/distillory/adapters/: __init__.py  http_server.py  mcp_server.py  tools.py
src/distillory/providers/: __init__.py  base.py  embed_fastembed.py  embed_hash.py  embed_potion.py  llm_anthropic.py  llm_none.py
src/distillory/render/: __init__.py  graph.py  markdown.py
src/distillory/retrieval/: __init__.py  dense.py  fuse.py  keyword.py  matrix_cache.py  retriever.py
src/distillory/store/: __init__.py  chunks.py  db.py  ledger.py  profiles.py  schema.py
src/distillory/synthesis/: __init__.py  frontmatter.py  grader.py  prompt.py  schema_md.py  synthesizer.py
tests/: test_adapters.py  test_hybrid.py  test_ledger.py  test_slice1.py
